# Cours_work_4

./: .gitignore  README.md  main.py  pyproject.toml
heet/: hh_api.py  json_class.py  operation.py  save.py  supjob_api.py  utils.py  vacancies.py  working_with_API.py
