[tool.poetry]
name = "cours_work_4"
version = "0.1.0"
description = ""
authors = ["sergey <szaprudnov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
